--- a/compliment.html
+++ b/compliment.html
@@ -2,10 +2,9 @@
 
 <html>
   <head>
-    <title>Iterative Design: Ladder</title>
+    <title>The Compliment Hub</title>
     <link rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="compliment.css">
-    <!-- Deployment Link: https://fathomless-castle-93898.herokuapp.com-->
     <meta content="width=device-width, initial-scale=1" name="viewport" />
   </head>
 
@@ -19,7 +18,7 @@
                     <div class="grey">
                     <a class="navbutton2" href="./home.html">Projects</a>
                     <a class="navbutton2" href="./home.html">About</a>
-                    <a class="navbutton2" href="./home.html">Resume</a>
+                    <a class="navbutton2" href="./removed.html">Resume</a>
                     </div>
                 </div>
                 <h2 id="title">The Compliment Hub</h2>
