--- a/iterative.html
+++ b/iterative.html
@@ -19,7 +19,7 @@
                   <div class="grey">
                   <a class="navbutton2" href="./home.html">Projects</a>
                   <a class="navbutton2" href="./home.html">About</a>
-                  <a class="navbutton2" href="./home.html">Resume</a>
+                    <a class="navbutton2" href="./removed.html">Resume</a>
                   </div>
               </div>
               <h2 id="title">Iterative Design : Ladder</h2>
