--- a/redesign.html
+++ b/redesign.html
@@ -18,7 +18,7 @@
                     <a class="navbutton1" href="./home.html">Tiffany Zhang</a>
                     <div class="grey">
                     <a class="navbutton2" href="./home.html">Projects</a>
-                    <a class="navbutton2" href="./home.html">About</a>
+                    <a class="navbutton2" href="./about.html">About</a>
                     <a class="navbutton2" href="./removed.html">Resume</a>
                     </div>
                 </div>
