--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Tiffany Zhang</title>
+    <title>My Name</title>
     <link rel="stylesheet" href="index.css">
     <!-- TODO: add additional links here! e.g. fonts, icons, more stylesheets, etc. -->
     <meta content="width=device-width, initial-scale=1" name="viewport" />
@@ -15,14 +15,14 @@
     <div class="centerer">
         <div class="top-section">
             <div class="navbar">
-                <a class="navbutton1" href="./home.html">Tiffany Zhang</a>
+                <a class="navbutton1" href="./home.html">My Name</a>
                 <div class="grey">
                 <a class="navbutton2" href="./home.html">Projects</a>
                 <a class="navbutton2" href="./about.html">About</a>
                 <a class="navbutton2" href="./removed.html">Resume</a>
                 </div>
             </div>
-            <h1 class="intro">I'm Tiffany -- a full-stack developer studying at Brown University</h1>
+            <h1 class="intro">I'm FirstName -- a full-stack developer studying at Brown University</h1>
         </div>
         <div class="column-flex">
             <div class="grid">
