--- a/compliment.html
+++ b/compliment.html
@@ -14,16 +14,16 @@
         <div class="centerer">
             <div class="top-section">
                 <div class="navbar">
-                    <a class="navbutton1" href="./home.html">Tiffany Zhang</a>
+                    <a class="navbutton1" href="./home.html">My Name</a>
                     <div class="grey">
                     <a class="navbutton2" href="./home.html">Projects</a>
-                    <a class="navbutton2" href="./home.html">About</a>
+                    <a class="navbutton2" href="./about.html">About</a>
                     <a class="navbutton2" href="./removed.html">Resume</a>
                     </div>
                 </div>
                 <h2 id="title">The Compliment Hub</h2>
                 <img id="webimage" src="./images/complimenthub.png"></img>
-                <a class="weblink" id="first-weblink" href="http://ec2-18-222-67-212.us-east-2.compute.amazonaws.com:1234/en/">
+                <a class="weblink" id="first-weblink" href="./removed.html">
                 <button>View Project Website</button></a>
             </div>
             <div class="column-flex">
@@ -121,7 +121,7 @@
 					<img id="home-image" src="./images/complimenthub.png"></img>
 					<img id="about-image" src="./images/complimentfinal.png"></img>
 					<br>
-					<a class="weblink" href="http://ec2-18-222-67-212.us-east-2.compute.amazonaws.com:1234/en/">
+					<a class="weblink" href="./removed.html">
 					<button>View Project Website</button></a>
 					<br>
 					<br>
