--- a/redesign.html
+++ b/redesign.html
@@ -15,7 +15,7 @@
         <div class="centerer">
             <div class="top-section">
                 <div class="navbar">
-                    <a class="navbutton1" href="./home.html">Tiffany Zhang</a>
+                    <a class="navbutton1" href="./home.html">My Name</a>
                     <div class="grey">
                     <a class="navbutton2" href="./home.html">Projects</a>
                     <a class="navbutton2" href="./about.html">About</a>
