--- a/about.html
+++ b/about.html
@@ -8,7 +8,6 @@
 		<link rel="stylesheet" href="about.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
         <div class="centerer">
@@ -31,7 +30,7 @@
 					<p>Quisque ut magna in mi feugiat rutrum. Nullam volutpat malesuada mattis. Sed venenatis, sapien non gravida euismod, est velit eleifend turpis, eu aliquet metus enim nec felis. Aenean rhoncus, elit nec varius accumsan, enim justo bibendum arcu, vel laoreet est diam sit amet arcu. Vivamus in lacus justo. Donec a tincidunt magna.</p>
 					<p>Quisque viverra vel dui in ultrices. Nunc eu dapibus neque. Proin nec condimentum purus, et euismod ante. Quisque fermentum sapien eget dui molestie, sed condimentum velit sodales. Aliquam venenatis at felis quis efficitur. Ut varius eros quis rutrum volutpat. Pellentesque sed dui eu erat eleifend blandit et sit amet ex.</p>
 					<p>Donec interdum blandit pretium. Proin sit amet viverra mauris. Duis quam ipsum, pretium sed gravida eget, rhoncus id lacus. Proin nec pharetra turpis. Aliquam pretium laoreet ex sit amet semper. Mauris sit amet nisi id turpis pulvinar pretium. Proin sodales felis et sodales consequat. Etiam imperdiet ligula non velit ultrices vehicula.</p>
-					<p id="links">email@gmail.com • <a href="./removed.html">resume</a> • <a href="./removed.html">linkedin</a></p>
+					<p id="links">email@gmail.com &#8226; <a href="./removed.html">resume</a> &#8226; <a href="./removed.html">linkedin</a></p>
 					</div>
 				</div>
 			</div>
