--- a/persona-storyboarding.html
+++ b/persona-storyboarding.html
@@ -13,7 +13,7 @@
         <div class="centerer">
             <div class="top-section">
                 <div class="navbar">
-                    <a class="navbutton1" href="./home.html">Tiffany Zhang</a>
+                    <a class="navbutton1" id="name" href="./home.html">Tiffany Zhang</a>
                     <div class="grey">
                     <a class="navbutton2" href="./home.html">Projects</a>
                     <a class="navbutton2" href="./home.html">About</a>
