--- a/redesign.html
+++ b/redesign.html
@@ -64,19 +64,19 @@
                     <div class="blue-box">
                         Additional Problems :
                         <ul>
-                            <li>“REQUEST?” menu option name is unclear</li>
+                            <li>"REQUEST?"" menu option name is unclear</li>
 
                             <li>The menu bar that pops up when you scroll up blocks content and irritates many users, as this is an
                                 information page people often scroll back and forth on</li>
 
-                            <li>After clicking on “Show More” on chapters it becomes tedious to return to the top of the page with 100+ chapters in the way</li>
+                            <li>After clicking on "Show More" on chapters it becomes tedious to return to the top of the page with 100+ chapters in the way</li>
 
-                            <li>“BLOG” leads you to a page displaying suggested or new manhwa, and not to a blog</li>
+                            <li>"BLOG" leads you to a page displaying suggested or new manhwa, and not to a blog</li>
 
                             <li>There are 3 different recommendation sections on the page, which is a bit much and distracts from
                                 the information about the manhwa the page is focused on</li>
 
-                            <li>The “YOU MAY ALSO LIKE” section is important but is placed at the very bottom where it is hard to find</li>
+                            <li>The "YOU MAY ALSO LIKE" section is important but is placed at the very bottom where it is hard to find</li>
 
                             <li>A very large amount of comments are shown before "Load more comments" option, making it difficult to reach the bottom of the page.
                                  (This not apparent on this specific manhwa's page as there are not many comments, but is an issue when there are). There is also no
