--- a/redesign.html
+++ b/redesign.html
@@ -91,7 +91,7 @@
                     <p>A large portion of the website is light grey text on light grey or white background, causing a lot of contrast errors.
                         WAVE detected 155 contrast errors. WAVE also found 7 elements that were missing alternative text describing them,
                         making it difficult for users using screen readers to determine their functions. When testing the website with VoiceOver
-                        on Safari, I struggled with the navigation bar because there are dropdown options under “MANGA LIST” and “BLOG,” but
+                        on Safari, I struggled with the navigation bar because there are dropdown options under "MANGA LIST" and "BLOG,"" but
                         this was not announced to me so I have no way of knowing they exist and cannot navigate to them without moving my mouse
                         cursor to them.</p>
                 </div>
