--- a/compliment.html
+++ b/compliment.html
@@ -55,7 +55,7 @@
 					</ol>
 					<h2>Secondary Research Questions</h2>
 					<ol>
-						<li>Frequency of compliment-giving behavior: Do people in all cultures perceive a deficit of compliment-giving (compared to how often you think you should…, how often do you actually…)? How often do people give compliments in different cultures? Is behavior frequency correlated with interpersonal miscalibration?</li>
+						<li>Frequency of compliment-giving behavior: Do people in all cultures perceive a deficit of compliment-giving (compared to how often you think you should, how often do you actually)? How often do people give compliments in different cultures? Is behavior frequency correlated with interpersonal miscalibration?</li>
 						<li>What makes a good compliment in the eyes of the expressers and recipients?</li>
 						<li>Taxonomy of compliments: What do people find praiseworthy in different cultures? </li>
 					</ol>
@@ -71,7 +71,7 @@
 					</div>
 					<p>We also created a scenario of a user using the website to try to understand how
 						a user might interact with the website : </p>
-					<p id="scenario">Steven Reiss opens his email and sees that there is a compliment on a very nicely designed front side of a compliment card his friend sent him from The Compliment Hub. Then he clicks on a link, which brings up the website home page and a pop-up window with the compliment card. This makes him happy and he saves the compliment as an image. The pop-up also has a survey asking about how the compliment made Steven feel. He fills out the survey, consents to having the data used for research, submits, and closes the pop-up. Steven decides to send a compliment to his other friend, and clicks to send a compliment on the home page. He picks the theme of fashion for the compliment card and writes a compliment about his friend’s excellent taste in button down shirts. He picks blue as his background color. He completes a survey about how he feels and consents to having this data used for research. He enters in his friend’s email and is taken to a confirmation page which has social media share buttons. He shares the compliment on Facebook and tags his friend, then closes the website. </p>
+					<p id="scenario">Steven Reiss opens his email and sees that there is a compliment on a very nicely designed front side of a compliment card his friend sent him from The Compliment Hub. Then he clicks on a link, which brings up the website home page and a pop-up window with the compliment card. This makes him happy and he saves the compliment as an image. The pop-up also has a survey asking about how the compliment made Steven feel. He fills out the survey, consents to having the data used for research, submits, and closes the pop-up. Steven decides to send a compliment to his other friend, and clicks to send a compliment on the home page. He picks the theme of fashion for the compliment card and writes a compliment about his friend's excellent taste in button down shirts. He picks blue as his background color. He completes a survey about how he feels and consents to having this data used for research. He enters in his friend's email and is taken to a confirmation page which has social media share buttons. He shares the compliment on Facebook and tags his friend, then closes the website. </p>
 
 				</div>
 				<div class="section">
@@ -139,7 +139,7 @@
 						such as lang tags and text alternatives for images. We then added these elements to improve accessibility.
 						We also discovered we had invalid tags, which we removed afterwards. </p>
 					<h2>Performance Testing</h2>
-					<p>We also ran our website’s homepage through GTmetrix, and we received a Pagespeed Score of 98% (A), as well as
+					<p>We also ran our website's homepage through GTmetrix, and we received a Pagespeed Score of 98% (A), as well as
 						a YSlow Score of 96% (A). This was very positive, and it showed that our group had done a good job with
 						performance speed. </p>
 					<h2>Frontend Testing </h2>
@@ -152,7 +152,7 @@
 					<p>We wrote a basic backend testing suite with Jasmine, and with it, discovered that our routing for the contact
 						selectively worked; it did not work when going from any page other than the home page because it was a href on
 						the homepage. This was an edge case, and we fixed this with a response.redirect to home.html. It also discovered
-						that the algorithm on the backend for computing “kindness chains” returned true in the test case when it should
+						that the algorithm on the backend for computing "kindness chains" returned true in the test case when it should
 						have returned false, leading us to fix that bug as well. </p>
 					<h2>Security Testing</h2>
 					<p>To test this, we manually tried some common attacks such as JS injections, SQL injections, and Cross-Site scripting.
