--- a/persona-storyboarding.html
+++ b/persona-storyboarding.html
@@ -51,7 +51,7 @@
                     <li> User 3 looked at the buttons on the right section of the interface, while User 1 and User 2
                         only looked at the buttons in the middle. </li>
                     <li> All users only used the buttons in the middle. </li>
-                    <li> All users looked at and left the middle dial in its original position, on “NORMAL CASUAL.” </li>
+                    <li> All users looked at and left the middle dial in its original position, on "NORMAL CASUAL." </li>
                 </ul>
                 <!-- End Intro and Observations -->
 
@@ -124,7 +124,7 @@
                 <p>Simple Sally is a retired mother with adult children. She is easygoing and tends to choose the path of least
                     resistance. </p>
 
-                <p>As someone who just wants things quick and simple, she doesn’t want to explore or read the details. This makes
+                <p>As someone who just wants things quick and simple, she doesn't want to explore or read the details. This makes
                     her uninterested in complicated interfaces and skip over anything unnecessary. </p>
 
                 <p>All three users had in common that they liked clear, easy to user interfaces and did not make use of the additional
