--- a/iterative.html
+++ b/iterative.html
@@ -140,7 +140,7 @@
                         <li class="sub">We changed the color schemes of employee vs. employer listing and search functionalities</li>
                       <li>Scrolling down for mission statement is not accessible (and not really important for functionality)</li>
                         <li class="sub">We removed the mission statement from our home page because it was not essential to the functionality for the webpage</li>
-                      <li>Why would you want to go see the employee page for “View” (is the employee public profile page necessary)</li>
+                      <li>Why would you want to go see the employee page for "View" (is the employee public profile page necessary)</li>
                         <li class="sub">We removed the publicly accessible page for employees and changed the view button to a contact button in order to reduce complexity and confusion</li>
                     </ul>
                   </p>
