--- a/iterative.html
+++ b/iterative.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="iterative.css">
     <!-- Deployment Link: https://fathomless-castle-93898.herokuapp.com-->
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
 
   <body>
