--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 		<link rel="stylesheet" href="about.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
         <div class="centerer">
