--- a/redesign.html
+++ b/redesign.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="redesign.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
         <meta content="width=device-width, initial-scale=1" name="viewport" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
     <body>
         <a name="top"></a>
@@ -64,7 +65,7 @@
                     <div class="blue-box">
                         Additional Problems :
                         <ul>
-                            <li>"REQUEST?"" menu option name is unclear</li>
+                            <li>"REQUEST?" menu option name is unclear</li>
 
                             <li>The menu bar that pops up when you scroll up blocks content and irritates many users, as this is an
                                 information page people often scroll back and forth on</li>
@@ -91,7 +92,7 @@
                     <p>A large portion of the website is light grey text on light grey or white background, causing a lot of contrast errors.
                         WAVE detected 155 contrast errors. WAVE also found 7 elements that were missing alternative text describing them,
                         making it difficult for users using screen readers to determine their functions. When testing the website with VoiceOver
-                        on Safari, I struggled with the navigation bar because there are dropdown options under "MANGA LIST" and "BLOG,"" but
+                        on Safari, I struggled with the navigation bar because there are dropdown options under "MANGA LIST" and "BLOG," but
                         this was not announced to me so I have no way of knowing they exist and cannot navigate to them without moving my mouse
                         cursor to them.</p>
                 </div>
