--- a/compliment.html
+++ b/compliment.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="index.css">
 	<link rel="stylesheet" href="compliment.css">
     <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
 
 	<body>
