--- a/iterative.html
+++ b/iterative.html
@@ -113,7 +113,7 @@
                   <p>
                     We combined the ideas from the above sketches into the following low-fidelity wireframe:
                   </p>
-                  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FY5uq8y9lDHGp5EdiT4mahc%2FLow-Fidelity-Wireframes%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+                  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FY5uq8y9lDHGp5EdiT4mahc%2FLow-Fidelity-Wireframes%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
               </div>
               <div class="section">
                   <h1>High-Fidelity Prototype</h1>
@@ -122,7 +122,7 @@
                     Below is our original high-fidelity prototype that incorporates visual design elements into the functionality
                     from our low-fidelity wireframe:
                   </p>
-                  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fnu8rOp4WaoqQQYB602eA4Z%2FHigh-Fidelity-Wireframes" allowfullscreen></iframe>
+                  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Fnu8rOp4WaoqQQYB602eA4Z%2FHigh-Fidelity-Wireframes" allowfullscreen></iframe>
                   <br>
                   <br>
                   <h2>Iterative Feedback</h2>
