--- a/iterative.html
+++ b/iterative.html
@@ -149,7 +149,7 @@
 
                   <p>We accounted for the above constructive criticism in the following improved high-fidelity prototype:</p>
 
-                  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FJPUGzeAedcOaueRPpDMIlo%2FImproved-High-Fidelity-Wireframes" allowfullscreen></iframe>
+                  <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FJPUGzeAedcOaueRPpDMIlo%2FImproved-High-Fidelity-Wireframes" allowfullscreen></iframe>
               </div>
               <div class="section">
                   <h1>User Testing</h1>
